--- a/src/View/Application/form/LoginForm.form
+++ b/src/View/Application/form/LoginForm.form
@@ -109,7 +109,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lbUsuario">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Usuario"/>
+            <Property name="text" type="java.lang.String" value="Correo"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtUsuario">
