Crud de Codigo Conductuales

--- a/src/View/Application/form/other/CodigosDisciplinarios.form
+++ b/src/View/Application/form/other/CodigosDisciplinarios.form
@@ -98,6 +98,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
@@ -107,6 +110,9 @@
               <Image iconType="3" name="/View/icons/add1.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnAddMouseClicked"/>
+          </Events>
         </Component>
         <Component class="View.BotonesText.Buttons" name="btnEdit">
           <Properties>
