--- a/src/View/Application/form/Password.form
+++ b/src/View/Application/form/Password.form
@@ -69,7 +69,7 @@
           <Color blue="66" green="33" red="0" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/View/icon/png/SMSS (1).png"/>
+          <Image iconType="3" name="/View/icon/png/QR Code-amico (3).png"/>
         </Property>
       </Properties>
       <Events>
@@ -119,7 +119,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="c0" green="c0" id="lightGray" palette="1" red="c0" type="palette"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Recuperacion de contrase&#xf1;a por SMS"/>
+        <Property name="text" type="java.lang.String" value="Recuperacion de contrase&#xf1;a por QR"/>
       </Properties>
     </Component>
   </SubComponents>
