intento de recuperacion media hechas

--- a/src/View/Application/form/RecuSMS.form
+++ b/src/View/Application/form/RecuSMS.form
@@ -96,6 +96,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Restablecer"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnRestablecerMouseClicked"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="450" y="540" width="130" height="50"/>
