--- a/src/View/Application/form/RecuQR.form
+++ b/src/View/Application/form/RecuQR.form
@@ -71,13 +71,15 @@
                       <Component id="btnEnviar" min="-2" pref="110" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtTelefono" max="32767" attributes="0"/>
-                              <Component id="txtCorreo" min="-2" pref="197" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="txtTelefono" max="32767" attributes="0"/>
+                                  <Component id="txtCorreo" min="-2" pref="197" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
-                          <Component id="txtCambioContraseña" min="-2" pref="207" max="-2" attributes="0"/>
+                          <Component id="txtCambioContraseña" alignment="1" min="-2" pref="197" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                       <Component id="btnRestablecer" min="-2" pref="159" max="-2" attributes="0"/>
@@ -105,8 +107,8 @@
               <Component id="label1" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="35" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtCambioContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnRestablecer" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
+                  <Component id="txtCambioContraseña" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
           </Group>
@@ -241,15 +243,11 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="View.SWING.textField" name="txtCambioContrase&#xf1;a">
+    <Component class="View.SWING.Contrase&#xf1;a" name="txtCambioContrase&#xf1;a">
       <Properties>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="cc" type="rgb"/>
-        </Property>
+        <Property name="text" type="java.lang.String" value="contrase&#xf1;a1"/>
+        <Property name="hint" type="java.lang.String" value="Nueva Contrase&#xf1;a"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCambioContrase&#xf1;aActionPerformed"/>
-      </Events>
     </Component>
   </SubComponents>
 </Form>
